# GemRealty

./: Deployment.md  GemRealty.md  README.md  build_backend.cmd  build_frontend.cmd  deploy_backend.cmd  deploy_frontend.cmd  push_backend.cmd  push_frontend.cmd  run_backend.cmd  run_frontend.cmd
backend/: .containerignore  .gitignore  Dockerfile  backend.md  check_sdk.py  check_settings.py  init_sqlite.py  main.py  pyproject.toml  requirements.txt  run.cmd  test_backend.py
backend/app/: config.py  database.py
backend/app/agent/: agent_engine.py
backend/app/api/: auth.py  chat.py
backend/app/data/: gemrealty.db  listing.csv  schools.csv
backend/app/models/: __init__.py  base.py  role.py  token.py  user.py  user_role.py
backend/app/services/: llm_service.py
backend/app/tools/: real_estate_tool.py  school_tool.py
backend/tests/: test_agent_engine.py  test_db_connection.py  test_llm_service.py  test_real_estate_tool_schools.py
database/: README.md  role.sql  setup.cmd  user.sql  user_role.sql
devops/: build_backend.cmd  build_frontend.cmd  deploy_backend.cmd  deploy_frontend.cmd  test_api.cmd
frontend/: frontend.md
frontend/gemrealty/: .containerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/gemrealty/src/: App.jsx
frontend/gemrealty/src/components/: ProtectedRoute.jsx
frontend/gemrealty/src/pages/: Login.jsx  Profile.jsx  Register.jsx
frontend/gemrealty/src/services/: authService.js  realEstateApi.js
frontend/gemrealty/src/store/: index.js
(+8 files in other folders)
